Still in middle of refactor

--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
@@ -15,7 +15,8 @@ card.order =nt:unstructured,name,description,groupId,artifactId,version
 editor.description=styledText
 editor.url=url
 
-menuitem.view.actual= View actual {0}s 
+menuitem.view.actual= View actual {0} 
+menuitem.view.cards= View cards 
 menuitem.add.collection = Add {0}
 menuitem.add.artifact = Add new artifact
 menuitem.add.snippet = Add new snippet
