--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
@@ -18,7 +18,7 @@ editor.url=url
 menuitem.edit.text = Edit
 menuitem.view.text = View
 menuitem.view.actual= View
-menuitem.view.cards= View cards
+menuitem.view.cards= View
 menuitem.add.collection = Add {0}
 menuitem.add.artifact = Register new artifact
 menuitem.add.snippet = Add new snippet
