Menus redone, Browse option added

--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
@@ -22,6 +22,7 @@ menuitem.view.cards= View
 menuitem.add.collection = Add {0}
 menuitem.add.artifact = Register new artifact
 menuitem.add.snippet = Add new snippet
+menuitem.browse.text = Browse
 
 #defaults used by several card types
 missing.url.default= Unknown
@@ -41,7 +42,7 @@ button.ok.title = Ok
 button.cancel.title = Cancel
 button.test.title = Test
 
-#base images
+#base images //TODO Move these images to the relevant properties
 rss.image=artifact.rss
 tutorial.image=artifact.tutorials
 blog.image=artifact.blog
@@ -57,6 +58,7 @@ groupId.image=artifact.group
 artifact.image=artifact.artifact
 artifactId.image=artifact.artifact
 digest.image=artifact.jar
+forum.image=artifact.forum
 
 card.color=255,255,255
 card.title.indent=15
