--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/tutorial.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/tutorial.properties
@@ -3,14 +3,14 @@ card.title.indent=30
 card.title.icon=artifact.tutorial
 
 card.name.url={1}
-card.name.field=url
+card.name.field=title
 
 #This specifies what happens when "view action ..." is specified. 
 card.content.field=url
 card.content.feedType=feedType.browser
 
-card.order =url,description
-card.missing.string=url,description
+card.order =title,url,description
+card.missing.string=title,url,description
 
 help.tutorial.url=This is the url for the tutorial
 help.tutorial.description=The first few words of the description are seen more often than the rest, so please capture the meaning in the first 10 to 20 words\
