--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
@@ -15,6 +15,8 @@ card.order =nt:unstructured,name,description,groupId,artifactId,version
 editor.description=styledText
 editor.url=url
 
+jar.notRecognised.text = Your softwareFm Needs YOU!\nPlease add information about this jar by clicking <here>
+
 menuitem.edit.text = Edit
 menuitem.view.text = View
 menuitem.view.actual= View
