--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/mailingList.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/mailingList.properties
@@ -2,12 +2,15 @@ card.color=224,239,226
 card.title.indent=30
 card.title.icon=artifact.mailingList
 
-card.missing.string=email,description,subscribe,unsubscribe,url
+card.name.field=name
 
-missing.email.default = Add email
-missing.subscribe.default = Add email address used to subscribe
-missing.unsubscribe.default = Add email address used to unsubscribe 
+card.missing.string=name,email,description,subscribe,unsubscribe,url
+
+missing.email.default = <Add email>
+missing.subscribe.default = <Add email address used to subscribe>
+missing.unsubscribe.default = <Add email address used to unsubscribe> 
 missing.url.default=
+
 
 help.mailingList.email=This is the main email for the mailing list
 help.mailingList.description=The first few words of the description are seen more often than the rest, so please capture the meaning in the first 10 to 20 words\
