--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/tweet.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/tweet.properties
@@ -5,6 +5,7 @@ card.title.icon=artifact.twitter
 card.name.url={0}
 card.name.field=tweet
 
+card.missing.string=tweet
 #This specifies what happens when "view action ..." is specified. 
 card.content.field=tweet
 card.content.feedType=feedType.tweet
