--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/blog.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/blog.properties
@@ -5,6 +5,10 @@ card.title.icon=artifact.blog
 card.name.url={1}
 card.name.field=url
 
+card.order=url,description
+card.missing.string=url,description
+
+
 #This specifies what happens when "view action ..." is specified. 
 card.content.field=url
 card.content.feedType=feedType.browser
