--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/rss.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/rss.properties
@@ -4,12 +4,13 @@ card.title.icon=artifact.rss
 
 card.name.url={1}
 card.name.field=url
+card.order=url,description
+card.missing.string=url,description
 
 #This specifies what happens when "view action ..." is specified. 
 card.content.field=url
 card.content.feedType=feedType.rss
 
-card.missing.string=url,description
 
 help.rss.url=This is the 'rss feed url'
 help.rss.description=The first few words of the description are seen more often than the rest, so please capture the meaning in the first 10 to 20 words\
