--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/artifact.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/artifact.properties
@@ -5,10 +5,10 @@ card.title.navIcon=title.artifact
 
 
 
-card.order =name,description,issues,version,mailingList,tutorial,tweet,rss,blog
+card.order =name,description,issues,version,mailingList,tutorial,tweet,rss,blog,advert,recruitment
 
 
-card.missing.list=mailingList,tutorial,forum,tweet,rss,version,blog
+card.missing.list=mailingList,tutorial,forum,tweet,rss,version,blog,advert,recruitment
 card.missing.string=name,description,issues
 
 editor.issues=url
