Fixing icons and titles for Adverts and Recruitment

--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/advert.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/advert.properties
@@ -1,7 +1,7 @@
 card.color=240,227,218
 card.title.indent=30
 card.title.icon=artifact.rss
-advert.image=artifact.forum
+advert.image=artifact.advert
 
 card.name.url={1}
 card.name.field=title
