--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/artifact.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/artifact.properties
@@ -14,6 +14,7 @@ card.missing.string=name,description,issues
 editor.issues=url
 
 tutorial.name=Tutorials
+advert.name=Adverts
 
 missing.issues.default=<Please add the location of the issues database>
 
