--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/recruitment.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/recruitment.properties
@@ -1,12 +1,13 @@
 card.color=240,227,218
 card.title.indent=30
 card.title.icon=artifact.rss
-recruitment.image=artifact.forum
+recruitment.image=artifact.recruitment
 
 card.name.url={1}
 card.name.field=title
-card.order=title,description
-card.missing.string=title,description
+card.order=title,description,url
+card.missing.string=title,description,url
 
 help.jobs.title=A short title describing the job
 help.jobs.description=The job offer
+help.jobs.url=A url containing more information
