--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/artifact.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/artifact.properties
@@ -3,15 +3,13 @@ card.title.indent=25
 card.title.icon=artifact.artifact
 card.title.navIcon=title.artifact
 
+card.order =name,url,description,issues,downloadUrl,documentation,mailingList,tutorial,tweet,rss,forum,blog,advert,recruitment,version
 
-
-card.order =name,description,issues,version,mailingList,tutorial,tweet,rss,blog,advert,recruitment
-
-
-card.missing.list=mailingList,tutorial,forum,tweet,rss,version,blog,advert,recruitment
-card.missing.string=name,description,issues
+card.missing.list=mailingList,documentation,tutorial,forum,tweet,rss,version,blog,advert,recruitment
+card.missing.string=name,url,description,issues,downloadUrl
 
 editor.issues=url
+editor.downloadUrl=url
 
 tutorial.name=Tutorials
 advert.name=Adverts
