--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
@@ -61,6 +61,10 @@ artifact.image=artifact.artifact
 artifactId.image=artifact.artifact
 digest.image=artifact.jar
 forum.image=artifact.forum
+name.image=artifact.name
+description.image=artifact.description
+documentation.image=artifact.document
+downloadUrl.image=general.browse
 
 card.color=255,255,255
 card.title.indent=15
