--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/mailingList.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/mailingList.properties
@@ -5,6 +5,7 @@ card.title.icon=artifact.mailingList
 card.name.field=name
 
 card.missing.string=name,email,description,subscribe,unsubscribe,url
+card.missing.list=archive
 
 missing.email.default = <Add email>
 missing.subscribe.default = <Add email address used to subscribe>
