--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/tutorial.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/tutorial.properties
@@ -9,9 +9,10 @@ card.name.field=title
 card.content.field=url
 card.content.feedType=feedType.browser
 
-card.order =title,url,description
-card.missing.string=title,url,description
+card.order =title,url,description,author
+card.missing.string=title,url,description,author
 
 help.tutorial.url=This is the url for the tutorial
 help.tutorial.description=The first few words of the description are seen more often than the rest, so please capture the meaning in the first 10 to 20 words\
 \n\nThe description should describe the purpose of the tutorial 
+help.tutorial.author=The person who wrote the author
