--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/mailingList.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/mailingList.properties
@@ -12,6 +12,10 @@ missing.subscribe.default = <Add email address used to subscribe>
 missing.unsubscribe.default = <Add email address used to unsubscribe> 
 missing.url.default=
 
+email.image = artifact.email
+subscribe.image = artifact.subscribe
+unsubscribe.image = artifact.unsubscribe
+
 
 help.mailingList.email=This is the main email for the mailing list
 help.mailingList.description=The first few words of the description are seen more often than the rest, so please capture the meaning in the first 10 to 20 words\
