Added External Browser menu item

--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
@@ -25,6 +25,7 @@ menuitem.add.collection = Add {0}
 menuitem.add.artifact = Register new artifact
 menuitem.add.snippet = Add new snippet
 menuitem.browse.text = Browse
+menuitem.externalBrowse.text = Browse externally
 
 #defaults used by several card types
 missing.url.default= Unknown
