--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
@@ -15,7 +15,7 @@ card.order =nt:unstructured,name,description,groupId,artifactId,version
 editor.description=styledText
 editor.url=url
 
-jar.notRecognised.text = Your softwareFm Needs YOU!\nPlease add information about this jar by clicking <here>
+jar.notRecognised.text = Your softwareFm Needs YOU!\f\rPlease add information about this jar by clicking <here>
 
 menuitem.edit.text = Edit
 menuitem.view.text = View
