--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/documentation.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/documentation.properties
@@ -1,12 +1,14 @@
 card.color=240,227,218
 card.title.indent=30
-card.title.icon=artifact.archive
-archive.image=artifact.archive
+card.title.icon=artifact.document
+documentation.image=artifact.document
 
 card.name.url={1}
-card.name.field=url
-card.missing.string=url
+card.name.field=title
+card.order=title,url,description
+card.missing.string=title,description,url
 
 #This specifies what happens when "view action ..." is specified. 
 card.content.field=url
 card.content.feedType=feedType.browser
+
