--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
@@ -15,7 +15,10 @@ card.order =nt:unstructured,name,description,groupId,artifactId,version
 editor.description=styledText
 editor.url=url
 
-jar.notRecognised.text = Your softwareFm Needs YOU!\f\rPlease add information about this jar by clicking <here>
+
+jar.notRecognised.title=Add new Jar
+jar.notRecognised.text = \n\nYour softwareFm Needs YOU!\n\nPlease add information about this jar by clicking <here>
+jar.notRecognised.thankYou.text = \n\nThank you for contributing to SoftwareFm
 
 menuitem.edit.text = Edit
 menuitem.view.text = View
@@ -64,7 +67,7 @@ digest.image=artifact.jar
 forum.image=artifact.forum
 name.image=artifact.name
 description.image=artifact.description
-documentation.image=artifact.document
+
 downloadUrl.image=general.browse
 
 card.color=255,255,255
