--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/archive.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/archive.properties
@@ -1,7 +1,7 @@
 card.color=240,227,218
 card.title.indent=30
-card.title.icon=artifact.rss
-archive.image=artifact.mailingList
+card.title.icon=artifact.archive
+archive.image=artifact.archive
 
 card.name.url={1}
 card.name.field=url
