--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/recruitment.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/recruitment.properties
@@ -1,6 +1,6 @@
 card.color=240,227,218
 card.title.indent=30
-card.title.icon=artifact.rss
+card.title.icon=artifact.recruitment
 recruitment.image=artifact.recruitment
 
 card.name.url={1}
