Cleaning up snippets

--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
@@ -17,8 +17,9 @@ editor.url=url
 
 
 jar.notRecognised.title=Add new Jar
-jar.notRecognised.text = \n\nYour softwareFm Needs YOU!\n\nPlease add information about this jar by clicking <here>
+jar.notRecognised.text = \n\nThis jar is not present in the database\n\nPlease add information about it by clicking here.
 jar.notRecognised.thankYou.text = \n\nThank you for contributing to SoftwareFm
+file.notAJar.text = This item isn't held in a Jar. 
 
 menuitem.edit.text = Edit
 menuitem.view.text = View
