--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
@@ -30,7 +30,7 @@ menuitem.add.artifact = Register new artifact
 menuitem.add.snippet = Add new snippet
 menuitem.browse.text = Browse
 menuitem.externalBrowse.text = Browse externally
-
+menuitem.editSnippet.text = Edit snippet
 #defaults used by several card types
 missing.url.default= Unknown
 missing.name.default = <Please add a name>
