--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/artifact.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/artifact.properties
@@ -3,9 +3,8 @@ card.title.indent=25
 card.title.icon=artifact.artifact
 card.title.navIcon=title.artifact
 
-card.order =name,url,description,issues,downloadUrl,documentation,mailingList,tutorial,tweet,rss,forum,blog,advert,recruitment,version
-
-card.missing.list=mailingList,documentation,tutorial,forum,tweet,rss,version,blog,advert,recruitment
+card.order =name,url,description,issues,downloadUrl,documentation,mailingList,tutorial,tweet,rss,forum,blog,advert,recruitment,version,comment
+card.missing.list=mailingList,documentation,tutorial,forum,tweet,rss,version,blog,advert,recruitment,comment
 card.missing.string=name,url,description,issues,downloadUrl
 
 editor.issues=url
