--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/snippet.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/snippet.properties
@@ -1,6 +1,7 @@
 card.color=242,235,222
 card.title.indent=30
 card.title.icon=artifact.tutorial
+snippet.image = artifact.tutorial
 
 card.name.url={1}
 card.name.field=title
