First stab at comments

--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
@@ -36,7 +36,9 @@ missing.url.default= Unknown
 missing.name.default = <Please add a name>
 missing.description.default = <Please add a description>
 
-
+# 0: url, 1: last segment, 2: card type
+comment.title = Comments for {1}
+comment.no.title = No Comments. Use context menu to add one
 #Fields not to be shown: comma separated list
 keys.hide = jcr:primaryType,sling:resourceType
 
