--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
@@ -17,8 +17,23 @@ editor.url=url
 
 
 jar.notRecognised.title=Add new Jar
-jar.notRecognised.text = \n\nThis jar is not present in the database\n\nPlease add information about it by clicking here.
-jar.notRecognised.thankYou.text = \n\nThank you for contributing to SoftwareFm
+
+#0 file, #1 without path, 2 project name
+jar.notRecognised.text = This jar is not present in the database. Click this panel to add it to SoftwareFm\n\n\
+<Eclipse Project that added the jar:>\n\
+  {2}\n\n\
+<Jar name:>\n\
+  {1}\n\n\
+<Full jar path:>\n\
+ {0}
+jar.notRecognised.thankYou.text = Thank you. Right click here for helpful(?) searches\n\n\
+<Eclipse Project that added the jar:>\n\
+  {2}\n\n\
+<Jar name:>\n\
+  {1}\n\n\
+<Full jar path:>\n\
+ {0}
+
 file.notAJar.text = This item isn't held in a Jar. 
 
 menuitem.edit.text = Edit
@@ -31,10 +46,15 @@ menuitem.add.snippet = Add new snippet
 menuitem.browse.text = Browse
 menuitem.externalBrowse.text = Browse externally
 menuitem.editSnippet.text = Edit snippet
+menuitem.browse.jar = Browse for Jar 
+menuitem.browseMaven.jar =  Browse for Jar and Maven
+
+
 #defaults used by several card types
 missing.url.default= Unknown
 missing.name.default = <Please add a name>
 missing.description.default = <Please add a description>
+
 
 # 0: url, 1: last segment, 2: card type
 comment.title = Comments for {1}
