--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
@@ -34,7 +34,7 @@ jar.notRecognised.thankYou.text = Thank you. Right click here for helpful(?) sea
 <Full jar path:>\n\
  {0}
 
-file.notAJar.text = This item isn't held in a Jar. 
+file.notAJar.text = This item isn''t held in a Jar. 
 
 menuitem.edit.text = Edit
 menuitem.view.text = View
