Added different colors to title and body.

--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
@@ -94,6 +94,7 @@ description.image=artifact.description
 downloadUrl.image=general.browse
 
 card.color=255,255,255
+card.title.color = 255,255,255
 card.title.indent=15
 card.title.icon=title.folder
 
