--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/advert.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/advert.properties
@@ -1,4 +1,5 @@
 card.color=240,227,218
+card.title.color=189,227,221
 card.title.indent=30
 card.title.icon=artifact.advert
 advert.image=artifact.advert
