--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/archive.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/archive.properties
@@ -1,4 +1,5 @@
 card.color=240,227,218
+card.title.color=223,218,145
 card.title.indent=30
 card.title.icon=artifact.archive
 archive.image=artifact.archive
