--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/group.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/group.properties
@@ -1,4 +1,5 @@
 card.color=243,232,252
+card.title.color=193,229,206
 card.title.indent=20
 card.title.icon=artifact.group
 card.title.navIcon=title.group
