--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/recruitment.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/recruitment.properties
@@ -1,4 +1,5 @@
-card.color=240,227,218
+card.color=236,230,213
+card.title.color=224,214,185
 card.title.indent=30
 card.title.icon=artifact.recruitment
 recruitment.image=artifact.recruitment
