--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/artifact.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/artifact.properties
@@ -1,4 +1,5 @@
 card.color=235,234,252
+card.title.color=203,200,248
 card.title.indent=25
 card.title.icon=artifact.artifact
 card.title.navIcon=title.artifact
