--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/documentation.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/documentation.properties
@@ -1,4 +1,5 @@
 card.color=240,227,218
+card.title.color=206,214,246
 card.title.indent=30
 card.title.icon=artifact.document
 documentation.image=artifact.document
