--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/jar.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/jar.properties
@@ -1,4 +1,5 @@
 card.color=236,248,252
+card.title.color=204,239,248
 card.title.indent=35
 card.title.icon=artifact.jar
 card.title.navIcon=title.jar
