--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/version.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/version.properties
@@ -1,4 +1,5 @@
 card.color=235,242,246
+card.title.color=235,242,246
 card.title.indent=30
 card.title.icon=artifact.jar
 card.title.navIcon=title.jar
