Added title bars to most text areas

--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
@@ -19,14 +19,16 @@ editor.url=url
 jar.notRecognised.title=Add new Jar
 
 #0 file, #1 without path, 2 project name
-jar.notRecognised.text = This jar is not present in the database. Click this panel to add it to SoftwareFm\n\n\
+jar.notRecognised.title= Jar not present in database
+jar.notRecognised.text = Click this panel to add it to SoftwareFm\n\n\
 <Eclipse Project that added the jar:>\n\
   {2}\n\n\
 <Jar name:>\n\
   {1}\n\n\
 <Full jar path:>\n\
  {0}
-jar.notRecognised.thankYou.text = Thank you. Right click here for helpful(?) searches\n\n\
+jar.notRecognised.thankYou.title = Thank you for contributing
+jar.notRecognised.thankYou.text = Right click here for searches\n\n\
 <Eclipse Project that added the jar:>\n\
   {2}\n\n\
 <Jar name:>\n\
@@ -34,7 +36,8 @@ jar.notRecognised.thankYou.text = Thank you. Right click here for helpful(?) sea
 <Full jar path:>\n\
  {0}
 
-file.notAJar.text = This item isn''t held in a Jar. 
+file.notAJar.title = This item isn''t held in a Jar. 
+file.notAJar.text =  
 
 menuitem.edit.text = Edit
 menuitem.view.text = View
