--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/comment.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/comment.properties
@@ -1,7 +1,8 @@
 card.color=242,235,222
 card.title.color=234,205,170
 card.title.indent=30
-card.title.icon=artifact.tutorial
+card.title.icon=artifact.comment
+comment.image = artifact.comment
 
 card.order =title,text
 card.missing.string=title,text
