--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/documentation.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/documentation.properties
@@ -8,6 +8,7 @@ card.name.url={1}
 card.name.field=title
 card.order=title,url,description
 card.missing.string=title,description,url
+card.missing.list=comment
 
 #This specifies what happens when "view action ..." is specified. 
 card.content.field=url
