--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/forum.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/forum.properties
@@ -12,6 +12,7 @@ card.content.feedType=feedType.browser
 
 card.order =url,description
 card.missing.string=url,description
+card.missing.list=comment
 
 help.forum.url=This is the url for the forum
 help.forum.description=The first few words of the description are seen more often than the rest, so please capture the meaning in the first 10 to 20 words
