--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/group.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/group.properties
@@ -10,7 +10,7 @@ card.order =groupId,name,url,description
 editor.groupId=none
 
 card.missing.string=url,description
-card.missing.list=artifact
+card.missing.list=artifact,comment
 
 artifact.name = Artifacts
 artifact.value = {1}
