--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/mailingList.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/mailingList.properties
@@ -5,8 +5,10 @@ card.title.icon=artifact.mailingList
 
 card.name.field=name
 
+card.order=name,email,description,subscribe,unsubscribe,url
 card.missing.string=name,email,description,subscribe,unsubscribe,url
-card.missing.list=archive
+card.missing.list=archive,comment
+
 
 missing.email.default = <Add email>
 missing.subscribe.default = <Add email address used to subscribe>
