--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/recruitment.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/recruitment.properties
@@ -8,6 +8,7 @@ card.name.url={1}
 card.name.field=title
 card.order=title,description,url
 card.missing.string=title,description,url
+card.missing.list=comment
 
 help.jobs.title=A short title describing the job
 help.jobs.description=The job offer
