--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/tutorial.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/tutorial.properties
@@ -12,6 +12,7 @@ card.content.feedType=feedType.browser
 
 card.order =title,url,description,author
 card.missing.string=title,url,description,author
+card.missing.list=comment
 
 help.tutorial.url=This is the url for the tutorial
 help.tutorial.description=The first few words of the description are seen more often than the rest, so please capture the meaning in the first 10 to 20 words\
