--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/version.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/version.properties
@@ -8,6 +8,7 @@ card.order=groupId,artifactId,version,digest
 
 card.missing.string=groupId,version,artifactId
 card.missing.list=digest
+card.missing.list=comment
 
 editor.groupId=none
 editor.artifactId=none
