--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/advert.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/advert.properties
@@ -1,3 +1,4 @@
+
 card.color=240,227,218
 card.title.color=189,227,221
 card.title.indent=30
@@ -7,7 +8,9 @@ advert.image=artifact.advert
 card.name.url={1}
 card.name.field=title
 card.order=title,description,url
+
 card.missing.string=title,description,url
+card.missing.list=comment
 
 #This specifies what happens when "view action ..." is specified. 
 card.content.field=url
