--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/jar.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/jar.properties
@@ -3,3 +3,5 @@ card.title.color=204,239,248
 card.title.indent=35
 card.title.icon=artifact.jar
 card.title.navIcon=title.jar
+
+card.missing.list=comment
