--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/archive.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/archive.properties
@@ -7,6 +7,7 @@ archive.image=artifact.archive
 card.name.url={1}
 card.name.field=url
 card.missing.string=url
+card.missing.list=comment
 
 #This specifies what happens when "view action ..." is specified. 
 card.content.field=url
