--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/blog.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/blog.properties
@@ -8,6 +8,7 @@ card.name.field=url
 
 card.order=url,description
 card.missing.string=url,description
+card.missing.list=comment
 
 
 #This specifies what happens when "view action ..." is specified. 
