--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/rss.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/rss.properties
@@ -7,6 +7,7 @@ card.name.url={1}
 card.name.field=url
 card.order=url,description
 card.missing.string=url,description
+card.missing.list=comment
 
 #This specifies what happens when "view action ..." is specified. 
 card.content.field=url
