--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/snippet.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/snippet.properties
@@ -13,6 +13,7 @@ card.content.feedType=feedType.snippet
 
 card.order =title,description,content
 card.missing.string=title,description,content
+card.missing.list=comment
 
 editor.content=styledText
 
