--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/tweet.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/tweet.properties
@@ -7,6 +7,8 @@ card.name.url={0}
 card.name.field=tweet
 
 card.missing.string=tweet
+card.missing.list=comment
+
 #This specifies what happens when "view action ..." is specified. 
 card.content.field=tweet
 card.content.feedType=feedType.tweet
