--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/snippet.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/snippet.properties
@@ -1,5 +1,5 @@
 card.color=242,235,222
-card.title.indent=245,205,180
+card.title.color=245,205,180
 card.title.icon=artifact.tutorial
 snippet.image = artifact.tutorial
 
