--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
@@ -73,6 +73,7 @@ nt_unstructured.value = {1}
 button.ok.title = Ok
 button.cancel.title = Cancel
 button.test.title = Test
+button.comment.add.title=New Comment
 
 #base images //TODO Move these images to the relevant properties
 rss.image=artifact.rss
