--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
@@ -63,7 +63,7 @@ missing.description.default = <Please add a description>
 comment.title = Comments for {1}
 comment.no.title = No Comments. Use context menu to add one
 #Fields not to be shown: comma separated list
-keys.hide = jcr:primaryType,sling:resourceType,jcr:mixinTypes
+keys.hide = jcr:primaryType,sling:resourceType,jcr:mixinTypes,created
 
 #for name 0 is the name 1 is camelCaseToPretty
 #for value 0 is the value 1 is size if it's a list 
@@ -73,8 +73,8 @@ nt_unstructured.value = {1}
 button.ok.title = Ok
 button.cancel.title = Cancel
 button.test.title = Test
-button.comment.add.title=New Comment
-button.comment.add.icon=general.commentAdd
+button.comment.add.title=
+button.comment.add.image=general.commentAdd
 
 #base images //TODO Move these images to the relevant properties
 rss.image=artifact.rss
