Added help menu

--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
@@ -51,7 +51,7 @@ menuitem.externalBrowse.text = Browse externally
 menuitem.editSnippet.text = Edit snippet
 menuitem.browse.jar = Browse for Jar 
 menuitem.browseMaven.jar =  Browse for Jar and Maven
-
+menuitem.help.text = Help
 
 #defaults used by several card types
 missing.url.default= Unknown
@@ -61,7 +61,7 @@ missing.description.default = <Please add a description>
 
 # 0: url, 1: last segment, 2: card type
 comment.title = Comments for {1}
-comment.no.title = No Comments. Use context menu to add one
+comment.no.title = No Comments. 
 #Fields not to be shown: comma separated list
 keys.hide = jcr:primaryType,sling:resourceType,jcr:mixinTypes,created
 
@@ -77,9 +77,10 @@ button.comment.add.title=
 button.comment.add.image=general.commentAdd
 
 #base images //TODO Move these images to the relevant properties
-rss.image=artifact.rss
-tutorial.image=artifact.tutorials
+email.image = artifact.email
+text.image=artifact.description
 
+rss.image=artifact.rss
 mailingList.image=artifact.mailingList
 tweet.image=artifact.twitter
 issues.image=artifact.issues
@@ -94,6 +95,7 @@ artifactId.image=artifact.artifact
 digest.image=artifact.jar
 forum.image=artifact.forum
 name.image=artifact.name
+title.image = artifact.name
 description.image=artifact.description
 
 downloadUrl.image=general.browse
