--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/artifact.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/artifact.properties
@@ -18,24 +18,32 @@ advert.name=Adverts
 
 missing.issues.default=<Please add the location of the issues database>
 
-help.artifact.name=This is the (human readable) name of the artifact.
+help.artifact.name=This is the (human readable) name of this artifact.
+help.artifact.url=This is the url for the project that created this artifact
 help.artifact.description=The first few words of the description are seen more often than the rest, so please capture the meaning in the first 10 to 20 words\
-\n\nThe description should describe the purpose of the artifact 
+\n\nThe description should describe the purpose of this artifact
+help.artifact.downloadUrl=This is the url to go to in order to download the artifact 
 help.artifact.issues=This is the url of the issues database for this artifact.\
 \n\nFor some projects there will be no database, just an email address.
-help.artifact.version=Above you see all the versions of this artifact that are known about by Software FM.\
-\n\nThe usual way to add a new one is to right click on the word 'Version' in the left pane, and select 'add version'.
+help.artifact.documentation=The documentation is the place to store urls for things like javadocs, user manuals, installation guides, books. \n\n\
+If you find some documentation on the internet that isn't mentioned here, please add it by right clicking the word documentation in the left pane
 help.artifact.mailingList=Above you see the known mailing lists. \
-\n\nTo add a new one right click on the word 'Mailing List' in the left pane, and select 'add mailingList'. This will prompt you for a name. Typical names are 'dev', 'announce', 'users', and are often already given by the project\
-\n\nAfter the new list is created, you can edit the properties of the new mailing list such as 'email', 'subscribe' and 'unsubscribe'
+\n\nTo add a new one use the right click on the word 'Mailing List' in the left pane
 help.artifact.tutorial=Above you see all the known tutorials for this artifact\
-\n\nTo add a new one right click on the word 'Tutorials' in the left pane, and select 'add tutorial'. This will prompt you for the url of the tutorial
+\n\nTo add a new one right click on the word 'Tutorials' in the left pane
 help.artifact.tweet=Above you see all the known tweet keywords for this artifact\
-\n\nTo add a new one right click on the word 'Tweet' in the left pane, and select 'add tweet'. This will prompt you for the tweet keyword
+\n\nTo add a new one right click on the word 'Tweet' in the left pane
+help.artifact.forum=Above you see all the known forums for this artifact\
+\n\nIf you find a helpful forum that isn't listed here, please add it by right clicking the word forum in the left pane
+help.artifact.article=An article is an interesting webpage that is talking about this project/artifact. If the webpage is news feed about this project, it may be more appropriate to add it as an rss\
+\n\nTo add a new one right click on the word 'Article' in the left pane
 help.artifact.rss=Above you see all the known rss urls for this artifact\
-\n\nTo add a new one right click on the word 'Rss' in the left pane, and select 'add rss'. This will prompt you for the rss url
-help.artifact.blog=Above you see all the known blogs for this artifact\
-\n\nTo add a new one right click on the word 'Blog' in the left pane, and select 'add blog'. This will prompt you for the blog url
-help.artifact.facebook=Above you see all the known facebook pages for this artifact\
-\n\nTo add a new one right click on the word 'Facebook' in the left pane, and select 'add facebook'. This will prompt you for the facebook url
+\n\nTo add a new one right click on the word 'Rss' in the left pane
+help.artifact.company=This is the place that companies (and individuals if they want) that offer commercial services around this artifact/project can advertise. \
+It is different to an advert, as adverts can be selling just about anything (books/teashirts/toothpaste...).\
+\n\nTo add a new one right click on the word 'Advert' in the left pane
+help.artifact.advert=This is the place that advertisers can put stuff that they thing people who use this artifact want to see / buy.\n\n\
+ This is a free service, but items put here by spammers will be removed. 
+help.artifact.job=Anyone that wants to either recruit or be recruited to work on this artifact can post here.   
+help.artifact.version=Above you see all the versions of this artifact that are known about by Software FM.
 
