--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/advert.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/advert.properties
@@ -1,8 +1,10 @@
 
-card.color=240,227,218
+card.color=211,244,238
 card.title.color=189,227,221
 card.title.indent=30
 card.title.icon=artifact.advert
+card.title.navIcon=title.advert
+
 advert.image=artifact.advert
 
 card.name.url={1}
