--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/article.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/article.properties
@@ -2,6 +2,7 @@ card.color=227,247,254
 card.title.color=194,226,237
 card.title.indent=30
 card.title.icon=artifact.article
+card.title.navIcon=title.article
 article.image=artifact.article
 
 card.name.url={1}
