--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/company.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/company.properties
@@ -4,8 +4,8 @@ card.title.indent=30
 card.title.icon=artifact.company
 company.image = artifact.company
 
-card.order =title,text
-card.missing.string=title,text
+card.order =title,url,email,text
+card.missing.string=title,url,email,text
 editor.text=styledText
 
 card.name.url={1}
