--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/documentation.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/documentation.properties
@@ -2,6 +2,7 @@ card.color=228,232,249
 card.title.color=206,214,246
 card.title.indent=30
 card.title.icon=artifact.document
+card.title.navIcon=title.document
 documentation.image=artifact.document
 
 card.name.url={1}
