--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/forum.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/forum.properties
@@ -2,6 +2,7 @@ card.color=210,234,249
 card.title.color=193,217,231
 card.title.indent=30
 card.title.icon=artifact.forum
+card.title.navIcon=title.forum
 
 card.name.url={1}
 card.name.field=url
