--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/tutorial.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/tutorial.properties
@@ -2,6 +2,8 @@ card.color=242,235,222
 card.title.color=230,216,184
 card.title.indent=30
 card.title.icon=artifact.tutorial
+tutorial.image=artifact.tutorial
+
 
 card.name.url={1}
 card.name.field=title
