--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/tweet.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/tweet.properties
@@ -6,6 +6,7 @@ card.title.icon=artifact.twitter
 card.name.url={0}
 card.name.field=tweet
 
+card.order=tweet
 card.missing.string=tweet
 card.missing.list=comment
 
