Starting on the git server. Have local gets, and am calling cloneOrPull if not found

--- a/org.softwareFm.server/build.properties
+++ b/org.softwareFm.server/build.properties
@@ -1,4 +1,5 @@
-source.. = src/java/main/
+source.. = src/java/main/,\
+           src/test/java/
 output.. = bin/
 bin.includes = META-INF/,\
                .
