Added MakeRoot to the git facard

--- a/Externals/build.properties
+++ b/Externals/build.properties
@@ -17,4 +17,8 @@ bin.includes = META-INF/,\
                lib/jdom.jar,\
                lib/mysql-connector-java-5.1.17-bin.jar,\
                lib/org.eclipse.jgit-1.1.0.201109151100-r.jar,\
-               lib/jsch-0.1.44-1.jar
+               lib/jsch-0.1.44-1.jar,\
+               lib/spring-jdbc-3.0.5.RELEASE.jar,\
+               lib/commons-dbcp-1.3.jar,\
+               lib/commons-pool-1.5.4.jar,\
+               lib/spring-beans-3.0.5.RELEASE.jar
