Added webpage server to softwarefmserver

--- a/org.softwareFm.server/build.properties
+++ b/org.softwareFm.server/build.properties
@@ -1,5 +1,6 @@
 source.. = src/java/main/,\
-           src/test/java/
+           src/test/java/,\
+           src/main/resource/
 output.. = bin/
 bin.includes = META-INF/,\
                .
