--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
@@ -76,6 +76,13 @@ button.test.title = Test
 button.comment.add.title=
 button.comment.add.image=general.commentAdd
 
+action.welcome.title = Welcome
+action.group.title = Group
+action.artifact.title = Artifact
+action.jar.title = Jar
+action.version.title = Version
+action.snippet.title = Snippet
+
 #base images //TODO Move these images to the relevant properties
 email.image = artifact.email
 text.image=artifact.description
