--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/jar.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/jar.properties
@@ -4,4 +4,15 @@ card.title.indent=35
 card.title.icon=artifact.jar
 card.title.navIcon=title.jar
 
+editor.groupId=none
+editor.artifactId=none
+editor.version=none
+editor.source=none
+editor.javadoc=none
+
+card.order=groupId,artifactId,version,javadoc,source
+card.missing.string=groupId,artifactId,version,javadoc,source
 card.missing.list=comment
+
+missing.javadoc.default=<Please add a javadoc location>
+missing.source.default=<Please add a url for the source code jar>
