--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/Card.properties
@@ -115,6 +115,11 @@ card.title.icon=title.folder
 
 webpage.welcome.url=http://www.softwarefm.com/eclipse/welcome.html
 webpage.unknownJar.url=http://www.softwarefm.com/eclipse/notSeenBefore.html
+webpage.group.url=http://www.softwarefm.com/eclipse/group.html
+webpage.artifact.url=http://www.softwarefm.com/eclipse/artifact.html
+webpage.jar.url=http://www.softwarefm.com/eclipse/jar.html
+webpage.version.url=http://www.softwarefm.com/eclipse/version.html
+webpage.snippet.url=http://www.softwarefm.com/eclipse/snippet.html
 
 
 
