--- a/Externals/build.properties
+++ b/Externals/build.properties
@@ -21,4 +21,5 @@ bin.includes = META-INF/,\
                lib/spring-jdbc-3.0.5.RELEASE.jar,\
                lib/commons-dbcp-1.3.jar,\
                lib/commons-pool-1.5.4.jar,\
-               lib/spring-beans-3.0.5.RELEASE.jar
+               lib/spring-beans-3.0.5.RELEASE.jar,\
+               lib/java2html.jar
