--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/snippet.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/snippet.properties
@@ -7,7 +7,7 @@ card.name.url={1}
 card.name.field=title
 
 #This specifies what happens when "view action ..." is specified. 
-card.content.url=http://www.softwarefm.com{0}/{1}.snippet
+card.content.url={0}/{1}
 card.content.field=content
 card.content.feedType=feedType.snippet
 
@@ -16,6 +16,9 @@ card.missing.string=title,description,content
 card.missing.list=comment
 
 editor.content=styledText
+
+#0title, #1 description, #2 content
+snippet.template=<html><head><title>{0}</title></head><body><h3>{0}</h3>{1}<br />{2}</body></html>
 
 help.snippet.title=This is a human readable title for the snippet
 help.snippet.description=The first few words of the description are seen more often than the rest, so please capture the meaning in the first 10 to 20 words\
