Making sure can view snippet cards, and edit them

--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
@@ -49,6 +49,7 @@ menuitem.add.snippet = Add new snippet
 menuitem.browse.text = Browse
 menuitem.externalBrowse.text = Browse externally
 menuitem.editSnippet.text = Edit snippet
+menuitem.viewSnippet.text = View snippet
 menuitem.browse.jar = Browse for Jar 
 menuitem.browseMaven.jar =  Browse for Jar and Maven
 menuitem.help.text = Help
