--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/jar.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/jar.properties
@@ -10,9 +10,7 @@ editor.version=none
 editor.source=none
 editor.javadoc=none
 
-card.order=groupId,artifactId,version,javadoc,source
-card.missing.string=groupId,artifactId,version,javadoc,source
+card.order=groupId,artifactId,version
+card.missing.string=groupId,artifactId,version
 card.missing.list=comment
 
-missing.javadoc.default=<Please add a javadoc location>
-missing.source.default=<Please add a url for the source code jar>
