--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
@@ -81,6 +81,7 @@ action.welcome.title = Welcome
 action.group.title = Group
 action.artifact.title = Artifact
 action.jar.title = Jar
+action.debug.title = Debug
 action.version.title = Version
 action.snippet.title = Snippet
 
