Ensuring Snippet icon used by snippets

--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/snippet.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/snippet.properties
@@ -1,7 +1,7 @@
 card.color=242,235,222
 card.title.color=245,205,180
-card.title.icon=artifact.tutorial
-snippet.image = artifact.tutorial
+card.title.icon=artifact.snippet
+snippet.image = artifact.snippet
 
 card.name.url={1}
 card.name.field=title
