UnrecognisedJar gui started

--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
@@ -50,6 +50,7 @@ menuitem.browse.text = Browse
 menuitem.externalBrowse.text = Browse externally
 menuitem.editSnippet.text = Edit snippet
 menuitem.viewSnippet.text = View snippet
+menuItem.searchSoftwareFm.jar = Search SoftwareFM for Jar
 menuitem.browse.jar = Browse for Jar 
 menuitem.browseMaven.jar =  Browse for Jar and Maven
 menuitem.help.text = Help
