Added new unrecognised jar workflow

--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/Card.properties
@@ -16,25 +16,14 @@ editor.description=styledText
 editor.url=url
 
 
-jar.notRecognised.title=Add new Jar
+button.jar.search = Search for {0}
+ button.jarAndMaven.search = Search for {0} and Maven
+ 
+
+jar.importing.title = Importing {0}/{1}/{2}
+jar.importing.text = Importing \n<Group Id:> {0}\n<Artifact Id:> {1}\n<Version: >{2}
 
 #0 file, #1 without path, 2 project name
-jar.notRecognised.title= Jar not present in database
-jar.notRecognised.text = Click this panel to add it to SoftwareFm\n\n\
-<Eclipse Project that added the jar:>\n\
-  {2}\n\n\
-<Jar name:>\n\
-  {1}\n\n\
-<Full jar path:>\n\
- {0}
-jar.notRecognised.thankYou.title = Thank you for contributing
-jar.notRecognised.thankYou.text = Right click here for searches\n\n\
-<Eclipse Project that added the jar:>\n\
-  {2}\n\n\
-<Jar name:>\n\
-  {1}\n\n\
-<Full jar path:>\n\
- {0}
 
 file.notAJar.title = This item isn''t held in a Jar. 
 file.notAJar.text =  
