--- a/org.softwareFm.card/bin/org/softwareFm/card/configuration/unrecognised.properties
+++ b/org.softwareFm.card/bin/org/softwareFm/card/configuration/unrecognised.properties
@@ -4,4 +4,53 @@ card.title.indent=30
 card.title.icon=artifact.jarUnrecognised
 unrecognised.image=artifact.jarUnrecognised
 
+jar.notRecognised.searching.text = Searching SoftwareFM Database for other Jars that look like this. You can search the internet for the jar name with either of the two buttons below
+jar.notRecognised.found0.text= SoftwareFM has not seen a jar that looked like this before. You can search the internet for the jar name with either of the two buttons below
+jar.notRecognised.found1.text="SoftwareFM has seen one artifact that looked like this before. Select in the table below to populate. If you wish you can search the internet for the jar name with either of the two buttons below"
+jar.notRecognised.foundMany.text=SoftwareFM has seen some artifacts that look a bit like this. Please check which is the correct one!
+
+unrecognised.jarName.text = jarName
+unrecognised.eclipseProject.text = eclipseProject
+unrecognised.jarPath.text=jarPath
+
+jar.rt.notRecognised.title= Java Runtime needs adding
+jar.rt.notRecognised.text = This is a version of the Java runtime that SoftwareFm hasn''t seen before. Click this panel to add it to SoftwareFm\n\n\
+<Eclipse Project that added the jar:>\n\
+  {2}\n\n\
+<Jar name:>\n\
+  {1}\n\n\
+<Full jar path:>\n\
+  {0}\n\
+ <Guessed Version number:>\n\
+  {3}\n
+ 
+jar.notRecognised.title=Add new Jar
+jar.notRecognised.text = Click this panel to add it to SoftwareFm\n\n\
+<Eclipse Project that added the jar:>\n\
+  {2}\n\n\
+<Jar name:>\n\
+  {1}\n\n\
+<Full jar path:>\n\
+ {0}
+jar.notRecognised.thankYou.title = Thank you for contributing
+jar.notRecognised.thankYou.text = Right click here for searches\n\n\
+<Eclipse Project that added the jar:>\n\
+  {2}\n\n\
+<Jar name:>\n\
+  {1}\n\n\
+<Full jar path:>\n\
+ {0}
+S
+
+help.unrecognised.pleaseAdd.text=Please help SoftwareFM by adding details about this Jar. \n\nJust click the left hand side panel to start importing details about the Jar
+
+help.unrecognised.thankYou.text=Thank you for contributing to SoftwareFM.\n\n\
+To add the details about your new jar, SoftwareFM needs three things: a group id, artifact id and version.\
+Where possible guesses about those values have been added. Before clicking OK please check them!\n\n\
+The results of a search of SoftwareFM for similar looking artifacts will be displayed in the left screen.  
+
+ 
+
+
+
 
