--- a/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/unrecognised.properties
+++ b/org.softwareFm.card/src/main/resources/org/softwareFm/card/configuration/unrecognised.properties
@@ -46,9 +46,7 @@ help.unrecognised.pleaseAdd.text=Please help SoftwareFM by adding details about 
 
 help.unrecognised.thankYou.text=Thank you for contributing to SoftwareFM.\n\n\
 To add the details about your new jar, SoftwareFM needs three things: a group id, artifact id and version.\
-Where possible guesses about those values have been added. Before clicking OK please check them!\n\n\
-The results of a search of SoftwareFM for similar looking artifacts will be displayed in the left screen.  
-
+Where possible guesses about those values have been added. Before clicking OK please check them!
  
 
 
