--- a/org.softwareFm.explorer.eclipse/plugin.xml
+++ b/org.softwareFm.explorer.eclipse/plugin.xml
@@ -4,9 +4,9 @@
 
  <extension  point="org.eclipse.ui.views">
        <category  name="SoftwareFm" id="org.softwareFm" />
-      <view  name="Explorer" icon="icons/sfm.gif" category="org.softwareFm"   
+      <view  name="SoftwareFM" icon="icons/sfm.gif" category="org.softwareFm"   
              class="org.softwareFm.explorer.eclipse.ExplorerView"   id="org.softwareFm.explorer.eclipse.ExplorerView" />
-      <!--view  name="Snippets" icon="icons/sfm.gif" category="org.softwareFm"   
-             class="org.softwareFm.explorer.eclipse.SnippetView"   id="org.softwareFm.explorer.eclipse.SnippetView" /-->
+ <!-- <view  name="Admin" icon="icons/sfm.gif" category="org.softwareFm"   
+             class="org.softwareFm.explorer.eclipse.AdminView"   id="org.softwareFm.explorer.eclipse.AdminView" /> -->
    </extension>
 </plugin>
